--- a/game.conf
+++ b/game.conf
@@ -1,5 +1,5 @@
-title       = Minetest Game
-description = A basic exploration, mining, crafting, and building, sandbox game with no NPCs, monsters, or animals. Minetest Game is usually used with mods added, and many mods are available for this game. Reliably maintained by Luanti core developers.
+title = Ashwake
+description = Ashwake is a sandbox survival RPG set in the desolate aftermath of a forgotten age.
 min_minetest_version = 5.8
-release = 30625
-author = Luanti
+release = 1
+author = Ozcodx
