--- a/minetest.conf.example
+++ b/minetest.conf.example
@@ -1,10 +1,9 @@
-# This file contains settings of Minetest Game that can be changed in
-# minetest.conf.
+# This file contains settings of Ashwake that can be changed in minetest.conf.
 # By default, all the settings are commented and not functional.
 # Uncomment settings by removing the preceding #.
 
 # Whether creative mode (fast digging of all blocks, unlimited resources) should
-# be enabled.
+# be enabled. Not recommended for the authentic Ashwake experience.
 #creative_mode = false
 
 # Sets the behaviour of the inventory items when a player dies.
@@ -14,68 +13,58 @@
 #bones_mode = bones
 
 # The time in seconds after which the bones of a dead player can be looted by
-# everyone.
-# 0 to disable.
+# everyone. 0 to disable.
 #share_bones_time = 1200
 
-# How much earlier the bones of a dead player can be looted by
-# everyone if the player dies in a protected area they don't own.
-# 0 to disable. By default it is "share_bones_time" divide by four.
-#share_bones_time_early = 300
-
 # Inform player of condition and location of new bones.
-#bones_position_message = false
+#bones_position_message = true
 
-# Whether fire should be enabled. If disabled, 'basic_flame' nodes will
-# disappear.
-# 'permanent_flame' nodes will remain with either setting.
+# Whether fire should be enabled. Fire is an important survival mechanic in Ashwake.
 #enable_fire = true
 
-# Enable flame sound.
+# Enable flame sound for atmosphere.
 #flame_sound = true
 
 # Whether lavacooling should be enabled.
 #enable_lavacooling = true
 
-# Whether the stuff in initial_stuff should be given to new players.
-#give_initial_stuff = false
-#initial_stuff = default:pick_steel,default:axe_steel,default:shovel_steel,
-default:torch 99,default:cobble 99
+# Environmental settings
+# These settings control the day/night cycle and lighting
+#time_speed = 72          # Default day-night cycle speed
+#night_darkness = 0.1     # Dark nights for atmospheric effect
+#day_time_speed = 72      # Default daytime speed 
+#night_time_speed = 120   # Faster nights to increase challenge
 
 # Whether the TNT mod should be enabled.
-#enable_tnt = <true in singleplayer, false in multiplayer>
+# Not part of the default Ashwake experience.
+#enable_tnt = false
 
 # The radius of a TNT explosion.
 #tnt_radius = 3
-
-# Enable the stairs mod ABM that replaces the old 'upside down'
-# stair and slab nodes in old maps with the new param2 versions.
-#enable_stairs_replace_abm = false
 
 # Whether to allow respawning in beds.
 # Default value is true.
 #enable_bed_respawn = true
 
 # Whether players can skip night by sleeping.
-# Default value is true.
+# Setting to false makes nights more challenging.
 #enable_bed_night_skip = true
 
 # If enabled, fences and walls cannot be jumped over.
-#enable_fence_tall = false
-
-# Whether the engine's spawn search, which does not check for a suitable
-# starting biome, is used.
-# Default value is false.
-#engine_spawn = false
-
-# Whether river water source nodes create flowing sounds.
-# Helps rivers create more sound, especially on level sections.
-#river_source_sounds = false
+#enable_fence_tall = true
 
 # If enabled, the 'weather' mod will control cloud parameters, shadow intensity,
 # bloom and volumetric lighting.
-# Non-functional in V6 or Singlenode mapgens.
+# Enhances the atmospheric experience of Ashwake.
 #enable_weather = true
 
-# If enabled, non-player actions are logged
-#log_non_player_actions = false
+# Player settings
+#enable_damage = true     # Enable player damage for survival experience
+#enable_hunger = true     # Enable hunger mechanic if the mod is present
+#playeranimations = true  # Enable player animations for immersion
+
+# Velrot Corruption Settings (if the mod is present)
+# Controls how the Velrot corruption behaves in the world
+#enable_velrot = true                # Enable Velrot corruption
+#velrot_spread_speed = 1.0           # Controls how fast Velrot spreads (0.1-5.0)
+#velrot_mob_intensity = 1.0          # Controls Velrot mob spawning intensity (0.1-5.0)
