replace stamina(Fork) with the normal stamina

--- a/mods/stamina/mod.conf
+++ b/mods/stamina/mod.conf
@@ -1,7 +1,8 @@
 name = stamina
-description = Adds stamina, hunger and drunk effects.
-optional_depends = default, 3d_armor, player_monoids, pova, lucky_block
-min_minetest_version = 5.0
-release = 30470
-author = TenPlus1
-title = Stamina (Fork)
+title = Stamina
+description = Adds stamina and hunger effects.
+min_minetest_version = 5.4
+depends = default
+optional_depends = 3d_armor, player_monoids, pova
+release = 29981
+author = sofar
